--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,61 +8,10 @@
     android:background="@color/black"
     tools:context=".activities.MenuActivity">
 
-    <LinearLayout
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView2"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:background="@drawable/btn_back"
-        android:orientation="horizontal"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp">
-        <LinearLayout
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:background="@color/black"
-            android:orientation="vertical">
-            <ImageView
-                android:id="@+id/imagePizza"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                android:src="@drawable/menu01" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="240dp"
-            android:layout_height="80dp"
-            android:background="@drawable/background"
-            android:orientation="vertical">
-            <TextView
-                android:id="@+id/txt_pizza"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Nombre de la pizza"
-                android:textColor="@color/white"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
-                android:textSize="18dp" />
-            <TextView
-                android:id="@+id/txt_description"
-                android:layout_width="220dp"
-                android:layout_height="wrap_content"
-                android:text="Descripción"
-                android:textColor="@color/white"
-                android:layout_marginTop="5dp"
-                android:layout_marginLeft="10dp" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:orientation="horizontal"
-            android:background="@drawable/background">
-            <TextView
-                android:id="@+id/txt_precio"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="S/. 24.99"
-                android:layout_gravity="center_horizontal"
-                android:gravity="center"
-                android:textSize="18dp" />
-        </LinearLayout>
-    </LinearLayout>
-</LinearLayout>
+        android:layout_height="match_parent"
+        android:scrollbars="vertical" />
+
+</RelativeLayout>
